--- a/docker/Dockerfile_dataprep
+++ b/docker/Dockerfile_dataprep
@@ -10,4 +10,4 @@ ENV JAVA_HOME="/usr/lib/jvm/jre-17/"
 
 RUN mvn clean install -DskipTests
 
-COPY prepare_best_files.py ./scripts/convert_xml2csv.sh ./scripts/prepare_csv.sh /
+COPY prepare_best_files.py ./scripts/prepare_csv.sh /
