--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
     base:
         build:
@@ -12,10 +11,12 @@ services:
         ports:
             - "4001:4001"   # [HOST_PORT]:[CONTAINER_PORT] ; HOST_PORT: port used to connect to API. CONTAINER_PORT: same value as "IN_PORT" below
         environment:
-            - PELIAS_HOST=172.27.0.64:4000
+            - PELIAS_HOST=pelias_api:4000
             - LOG_LEVEL=LOW # LOW, MEDIUM or HIGH
             - NB_WORKERS=8  # Number of gunicorn workers
-            - IN_PORT=4001  # Internal port. Should correspond to the first value in the above "ports"  
+            - IN_PORT=4001  # Internal port. Should correspond to the first value in the above "ports"
+        networks:
+            - network_bepelias
         image: bepelias/api
         container_name: bepelias_api
 
@@ -28,4 +29,6 @@ services:
         image: bepelias/dataprep
         container_name: bepelias_dataprep
 
-        
+networks:
+    network_bepelias:
+        external: true
