--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
             - NB_WORKERS=8  # Number of gunicorn workers
             - IN_PORT=4001  # Internal port. Should correspond to the first value in the above "ports"
         networks:
-            - network_bepelias  
+            - belgium_bepelias_default  
         image: bepelias/api
         container_name: bepelias_api
 
@@ -36,7 +36,7 @@ services:
         image: bepelias/dataprep
         container_name: bepelias_dataprep
 networks:
-    network_bepelias:
+    belgium_bepelias_default:
         external: true
 
         
