--- a/docker/Dockerfile_api
+++ b/docker/Dockerfile_api
@@ -3,6 +3,7 @@ FROM bepelias/base
 COPY docker/requirements_api.txt ./
 RUN pip3 install -r requirements_api.txt
 
-COPY scripts/start_api.sh bepelias.py pelias.py utils.py ./
+COPY scripts/start_api.sh ./
+COPY bepelias/api.py bepelias/model.py bepelias/pelias.py bepelias/utils.py /bepelias/
 
 CMD "./start_api.sh"
