--- a/docker/Dockerfile_dataprep
+++ b/docker/Dockerfile_dataprep
@@ -10,4 +10,5 @@ ENV JAVA_HOME="/usr/lib/jvm/jre-17/"
 
 RUN mvn clean install -DskipTests
 
-COPY prepare_best_files.py ./scripts/prepare_csv.sh /
+COPY ./scripts/prepare_csv.sh /
+COPY bepelias/prepare_best_files.py bepelias/__init__.py /bepelias/
