--- a/docker/Dockerfile_dataprep
+++ b/docker/Dockerfile_dataprep
@@ -11,4 +11,4 @@ ENV JAVA_HOME="/usr/lib/jvm/jre-17/"
 RUN mvn clean install -DskipTests
 
 COPY ./scripts/prepare_csv.sh /
-COPY bepelias/prepare_best_files.py bepelias/__init__.py /bepelias/
+COPY src/bepelias/prepare_best_files.py src/bepelias/__init__.py /bepelias/
