--- a/docker/Dockerfile_base
+++ b/docker/Dockerfile_base
@@ -2,9 +2,11 @@ FROM redhat/ubi9
 
 USER root
 
+ENV PIP_ROOT_USER_ACTION=ignore
+
 RUN yum -y install python39 python3-pip
 RUN yum -y remove python3-requests
-RUN pip3 install pip==25.1
+RUN pip3 install pip==25.1.1
 
 COPY docker/requirements_base.txt ./
 RUN pip3 install -r requirements_base.txt
