--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,3 +20,5 @@ jobs:
           uses: actions/checkout@v1.0.0
         - name: Check files
           run: ls
+        - name: Run build script
+          run: ./scripts/build.sh api
