--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: Build & feed bePelias
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -9,7 +9,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -24,3 +23,8 @@ jobs:
           run: ./scripts/build.sh api
         - name: Run build script for Pelias
           run: ./scripts/build.sh pelias
+  feed:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get BeSt Address data
+        run: ./scripts/feed.sh
