--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,17 @@ name: Build & feed bePelias
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      region:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Region to build (all, bru, wal or vlg)'
+        # Default value if no value is explicitly provided
+        default: 'all'
+        # Input has to be provided for the workflow to run
+        required: true
+        # The data type of the input
+        type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,4 +34,4 @@ jobs:
         - name: Run build script for Pelias
           run: ./scripts/build.sh pelias
         - name: Get BeSt Address data
-          run: ./scripts/feed.sh
+          run: ./scripts/feed.sh all  ${{ inputs.region }}
