build: update to Python 3.12 and Pandas 2.2.3

--- a/docker/Dockerfile_api
+++ b/docker/Dockerfile_api
@@ -3,7 +3,7 @@ FROM bepelias/base
 ENV PIP_ROOT_USER_ACTION=ignore
 
 COPY docker/requirements_api.txt ./
-RUN pip3 install -r requirements_api.txt
+RUN bepelias_venv/bin/pip3 install -r requirements_api.txt
 
 COPY scripts/start_api.sh ./
 COPY src/bepelias/fastapi.py src/bepelias/base.py src/bepelias/model.py src/bepelias/pelias.py src/bepelias/utils.py src/bepelias/__init__.py /bepelias/
