--- a/docker/requirements_base.txt
+++ b/docker/requirements_base.txt
@@ -1,7 +1,7 @@
-pandas==1.5.3 
-numpy==1.24.2 
+pandas==2.2.3 
+numpy==2.0.2 
 urllib3
-requests==2.32.4 
-geopandas==0.13.2
-shapely==2.0.3
-
+requests==2.32.5 
+geopandas==1.0.1
+shapely==2.0.7
+tqdm==4.67.1
